now w added info entity

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -21,6 +21,7 @@ dataSources:
         - MintFinished
         - Approval
         - Transfer
+        - Info
       abis:
         - name: CroToken
           file: ./abis/CroToken.json
